--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 
 <body>
   <div class="welcome">Welcome! What is it that you need to do?</div>
+  <div class="todolist">
+    <input type="text" name="What is it you need to do" id="hi">
+  </div>
+
   <script src="script.js"></script>
 </body>
 
