--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <body>
   <div class="welcome">Welcome! What is it that you need to do?</div>
   <div class="todolist">
-    <input type="text" name="What is it you need to do" id="hi">
+    <input type="text" name="enter to do here" id="To-Do" placeholder="Enter Your To-Do Here" value="Add new">
+    <ul id="list"></ul>
   </div>
 
   <script src="script.js"></script>
