--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
 <body>
   <div class="welcome">Welcome! What is it that you need to do?</div>
   <div class="todolist">
-    <input type="text" name="enter to do here" id="To-Do" placeholder="Enter Your To-Do Here" value="Add new">
-    <ul id="list"></ul>
+    <input type="text" name="enter to do here" id="ToDoList" placeholder="Enter Your To-Do Here">
   </div>
-
+  <div class="container">
+    <ul>
+      <li></li>
+    </ul>
+  </div>
   <script src="script.js"></script>
 </body>
 
