--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@
   </div>
   <div class="container">
     <ul>
-      <li></li>
+      <li>Hi</li>
+      <li>What</li>
+      <li>Is</li>
+      <li>It</li>
+      <li>You</li>
+      <li>Need</li>
+      <li>Done</li>
     </ul>
   </div>
   <script src="script.js"></script>
