--- a/index.html
+++ b/index.html
@@ -12,17 +12,12 @@
 <body>
   <div class="welcome">Welcome! What is it that you need to do?</div>
   <div class="todolist">
-    <input type="text" name="enter to do here" id="ToDoList" placeholder="Enter Your To-Do Here">
+    <form action="" method="GET">
+      <input type="text" name="enter to do here" id="ToDoList" placeholder="Enter Your To-Do Here">
+    </form>
   </div>
   <div class="container">
     <ul>
-      <li>Hi</li>
-      <li>What</li>
-      <li>Is</li>
-      <li>It</li>
-      <li>You</li>
-      <li>Need</li>
-      <li>Done</li>
     </ul>
   </div>
   <script src="script.js"></script>
