updating to do list

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
   <div class="welcome">Welcome! What is it that you need to do?</div>
   <div class="todolist">
     <form action="" method="GET">
-      <input type="text" name="enter to do here" id="ToDoList" placeholder="Enter Your To-Do Here">
+      <input type="text" name="enter to do here" id="userInput" placeholder="Enter Your To-Do Here">
     </form>
   </div>
   <div class="container">
-    <ul>
+    <ul id="userslist">
     </ul>
   </div>
   <script src="script.js"></script>
