--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   <div class="todolist">
     <form action="" method="GET">
       <input type="text" name="enter to do here" id="userInput" placeholder="Enter Your To-Do Here">
+      <br>
+      <input type="button" value="submit" id="sbmt_btn">
     </form>
   </div>
   <div class="container">
