--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="todolist">
     <form action="" method="GET">
       <input type="text" name="enter to do here" id="userInput" placeholder="Enter Your To-Do Here">
-      <input type="button" value="submit" id="sbmt_btn">
+      <input type="button" value="Submit" id="sbmt_btn">
     </form>
   </div>
   <div class="container">
