--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
   <div class="todolist">
     <form action="" method="GET">
       <input type="text" name="enter to do here" id="userInput" placeholder="Enter Your To-Do Here">
-      <input type="button" value="Submit" id="sbmt_btn">
+      <br>
+      <button id="sbmt_btn">Submit</button>
     </form>
   </div>
   <div class="container">
-    <ul id="userslist">
+    <ul id="userslist" style="list-style: none;">
     </ul>
   </div>
   <script src="script.js"></script>
