--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <form action="" method="GET">
       <input type="text" name="enter to do here" id="userInput" placeholder="Enter Your To-Do Here">
       <br>
-      <button id="sbmt_btn">Submit</button>
+      <button type="reset" id="sbmt_btn">Submit</button>
     </form>
   </div>
   <div class="container">
