Andy refactor completed

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 
 <body>
   <div class="welcome">Welcome! What is it that you need to do?</div>
-  <div class="todolist">
+  <div class="todoList">
     <form action="" method="GET">
       <input type="text" name="enter to do here" id="userInput" placeholder="Enter Your To-Do Here">
       <br>
-      <button id="sbmt_btn">Submit</button>
+      <button id="submitButton">Submit</button>
     </form>
   </div>
   <div class="container">
-    <ul id="userslist" style="list-style: none;">
+    <ul id="usersList">
     </ul>
   </div>
   <script src="script.js"></script>
